Add sort and filter to table
